# myque

./: AGENTS.md  Cargo.toml  READMD.md  README.md  flake.nix
docs/: README.md  cli.md  development.md  dispatch-and-backends.md  task-format.md
src/: backend.rs  board.rs  cli.rs  eligibility.rs  frontmatter.rs  lib.rs  main.rs  model.rs  store.rs  validation.rs
tests/: cli_board.rs
