[package]
name = "myque"
version = "0.1.0"
edition = "2021"
description = "Local file-based task queue and CLI for autonomous agents"
license = "MIT"

[lib]
name = "myque"
path = "src/lib.rs"

[[bin]]
name = "myque"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
