[package]
name = "myque"
version = "0.1.0"
edition = "2024"
description = "Local file-based task queue and CLI for autonomous agents"
license = "MIT"

[lib]
name = "myque"
path = "src/lib.rs"

[[bin]]
name = "myque"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
shlex = "2.0"
thiserror = "2.0"
toml = "1.0"

[dev-dependencies]
tempfile = "3.10"
